--- a/DemoEntity/AltaGenero.cshtml
+++ b/DemoEntity/AltaGenero.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Page.Title = "Title goes here";
+    Page.Title = "AltaGenero";
     Layout = "LayoutLibros.cshtml";
 
     LibrosEntities le = new LibrosEntities();
