--- a/DemoEntity/BajaAutor.cshtml
+++ b/DemoEntity/BajaAutor.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Page.Title = "Title goes here";
+    Page.Title = "BajaAutor";
     Layout = "LayoutLibros.cshtml";
 
     LibrosEntities le = new LibrosEntities();
