--- a/DemoEntity/LayoutLibros.cshtml
+++ b/DemoEntity/LayoutLibros.cshtml
@@ -26,16 +26,20 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-                    <li><a href="#">Link</a></li>
+                    <li class="active"><a href="Index.cshtml">Indice de libros<span class="sr-only">(current)</span></a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Libreria<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="Index.cshtml">Indice</a></li>
                             <li><a href="Formulario.cshtml">Agregar libro</a></li>
                             <li><a href="BajaLibro.cshtml">Eliminar libro</a></li>
-                            <li><a href="Formulario.cshtml">Agregar libro</a></li>
-                            <li><a href="Formulario.cshtml">Agregar libro</a></li>
+                            <li><a href="AltaEditorial.cshtml">Agregar editorial</a></li>
+                            <li><a href="BajaEditorial.cshtml">Eliminar editorial</a></li>
+                            <li><a href="AltaAutor.cshtml">Agregar autor</a></li>
+                            <li><a href="AltaAutorEnLibro.cshtml">Agregar autor a un libro</a></li>
+                            <li><a href="BajaAutor.cshtml">Eliminar autor</a></li>
+                            <li><a href="AltaGenero.cshtml">Agregar genero</a></li>
+                            <li><a href="BajaGenero.cshtml">Eliminar genero</a></li>
+
                         </ul>
                     </li>
                 </ul>
@@ -46,7 +50,7 @@
                     <button type="submit" class="btn btn-default">Submit</button>
                 </form>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Link</a></li>
+                    <li><a href="ConsultaLibro.cshtml">Consultar libro</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
                         <ul class="dropdown-menu">
