--- a/EjRecetasEntity/AgregarReceta.cshtml
+++ b/EjRecetasEntity/AgregarReceta.cshtml
@@ -17,57 +17,44 @@
         miReceta.nombre = Request["nombre"];
         miReceta.instrucciones = Request["instrucciones"];
         re.Receta.Add(miReceta);
-        miIngrediente.nombre = Request["ingrediente"];
-        Ingrediente consultaIngrediente = re.Ingrediente.SingleOrDefault(i => i.nombre == miIngrediente.nombre);
-        if (consultaIngrediente == null)
+        if (Request["cantidad"] != "")
         {
-            re.Ingrediente.Add(miIngrediente);
-        }
-        else
-        {
+            miIngrediente.nombre = Request["ingrediente"];
+            Ingrediente consultaIngrediente = re.Ingrediente.SingleOrDefault(i => i.nombre == miIngrediente.nombre);
             miIngrediente = consultaIngrediente;
+
+            relacion.cantidad = int.Parse(Request["cantidad"]);
+            relacion.unidadDeMedida = Request["unidadDeMedida"];
+            miReceta.RecetaIngrediente.Add(relacion);
+            miIngrediente.RecetaIngrediente.Add(relacion);
+            re.RecetaIngrediente.Add(relacion);
+
         }
 
-        miIngrediente2.nombre = Request["ingrediente2"];
-        Ingrediente consultaIngrediente2 = re.Ingrediente.SingleOrDefault(i => i.nombre == miIngrediente2.nombre);
-        if (consultaIngrediente2 == null)
+        if (Request["cantidad2"] != "")
         {
-            re.Ingrediente.Add(miIngrediente2);
-        }
-        else
-        {
+            miIngrediente2.nombre = Request["ingrediente2"];
+            Ingrediente consultaIngrediente2 = re.Ingrediente.SingleOrDefault(i => i.nombre == miIngrediente2.nombre);
             miIngrediente2 = consultaIngrediente2;
-        }
 
-        miIngrediente3.nombre = Request["ingrediente3"];
-        Ingrediente consultaIngrediente3 = re.Ingrediente.SingleOrDefault(i => i.nombre == miIngrediente3.nombre);
-        if (consultaIngrediente3== null)
-        {
-            re.Ingrediente.Add(miIngrediente3);
+            relacion2.cantidad = int.Parse(Request["cantidad2"]);
+            relacion2.unidadDeMedida = Request["unidadDeMedida2"];
+            miReceta.RecetaIngrediente.Add(relacion2);
+            miIngrediente2.RecetaIngrediente.Add(relacion2);
+            re.RecetaIngrediente.Add(relacion2);
         }
-        else
+        if (Request["cantidad3"] != "")
         {
+            miIngrediente3.nombre = Request["ingrediente3"];
+            Ingrediente consultaIngrediente3 = re.Ingrediente.SingleOrDefault(i => i.nombre == miIngrediente3.nombre);
             miIngrediente3 = consultaIngrediente3;
+
+            relacion3.cantidad = int.Parse(Request["cantidad3"]);
+            relacion3.unidadDeMedida = Request["unidadDeMedida3"];
+            miReceta.RecetaIngrediente.Add(relacion3);
+            miIngrediente3.RecetaIngrediente.Add(relacion3);
+            re.RecetaIngrediente.Add(relacion3);
         }
-
-
-        relacion.cantidad = int.Parse(Request["cantidad"]);
-        relacion2.cantidad = int.Parse(Request["cantidad2"]);
-        relacion3.cantidad = int.Parse(Request["cantidad3"]);
-        relacion.unidadDeMedida = Request["unidadDeMedida"];
-        relacion2.unidadDeMedida = Request["unidadDeMedida2"];
-        relacion3.unidadDeMedida = Request["unidadDeMedida3"];
-
-
-        miReceta.RecetaIngrediente.Add(relacion);
-        miReceta.RecetaIngrediente.Add(relacion2);
-        miReceta.RecetaIngrediente.Add(relacion3);
-        miIngrediente.RecetaIngrediente.Add(relacion);
-        miIngrediente2.RecetaIngrediente.Add(relacion2);
-        miIngrediente3.RecetaIngrediente.Add(relacion3);
-        re.RecetaIngrediente.Add(relacion);
-        re.RecetaIngrediente.Add(relacion2);
-        re.RecetaIngrediente.Add(relacion3);
 
         re.SaveChanges();
 
@@ -79,6 +66,7 @@
 
 <div>
     <form action="#" method="post">
+        <br />  
         <label>Nombre</label>
         <input type="text" name="nombre" value="" />
         <br />
@@ -90,42 +78,46 @@
                 <option value=@item.nombre>@item.nombre</option>
             }
         </select>
+
         <label>Cantidad</label>
         <input type="text" name="cantidad" value="" />
         <label>Unidad de Medida</label>
         <input type="text" name="unidadDeMedida" value="" />
-        <br />
-        <br />
 
-        <label>Ingrediente 2</label>
-        <select name="ingrediente2">
-            @foreach (Ingrediente item in re.Ingrediente)
-            {
-                <option value=@item.nombre>@item.nombre</option>
-            }
-        </select>
-        <label>Cantidad</label>
-        <input type="text" name="cantidad2" value="" />
-        <label>Unidad de Medida</label>
-        <input type="text" name="unidadDeMedida2" value="" />
-        <br />
-        <br />
+        <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">Agregar otro</button>
+        <div id="demo" class="collapse">
+            <label>Ingrediente 2</label>
+            <select name="ingrediente2">
+                @foreach (Ingrediente item in re.Ingrediente)
+                {
+                    <option value=@item.nombre>@item.nombre</option>
+                }
+            </select>
+            <label>Cantidad</label>
+            <input type="text" name="cantidad2" value="" />
+            <label>Unidad de Medida</label>
+            <input type="text" name="unidadDeMedida2" value="" />
 
-        <label>Ingrediente 3</label>
-        <select name="ingrediente3">
-            @foreach (Ingrediente item in re.Ingrediente)
-            {
-                <option value=@item.nombre>@item.nombre</option>
-            }
-        </select>
-        <label>Cantidad</label>
-        <input type="text" name="cantidad3" value="" />
-        <label>Unidad de Medida</label>
-        <input type="text" name="unidadDeMedida3" value="" />
-        <br />
-        <br />
-        <br />
+            <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo2">Agregar otro</button>
+            <div id="demo2" class="collapse">
+                <label>Ingrediente 3</label>
+                <select name="ingrediente3">
+                    @foreach (Ingrediente item in re.Ingrediente)
+                    {
+                        <option value=@item.nombre>@item.nombre</option>
+                    }
+                </select>
+                <label>Cantidad</label>
+                <input type="text" name="cantidad3" value="" />
+                <label>Unidad de Medida</label>
+                <input type="text" name="unidadDeMedida3" value="" />
+                <br />
+                <br />
 
+            </div>
+        </div>
+
+        <br />
         <label>Instrucciones</label>
         <textarea name="instrucciones"></textarea>
 
