--- a/TPFINAL/TF_Base/Views/Boleto/Create.cshtml
+++ b/TPFINAL/TF_Base/Views/Boleto/Create.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Create";
-    Layout = "../_LayoutAero.cshtml";
+    Layout = "../_LayoutEmpleado.cshtml";
 }
 
 <h2>Reservar boleto</h2>
