--- a/TPFINAL/TF_Base/Views/Boleto/Historial.cshtml
+++ b/TPFINAL/TF_Base/Views/Boleto/Historial.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<TF_Base.Models.Boletos>
 @{
-    ViewBag.Title = "ListaBoletos";
-    Layout = "../_LayoutCliente.cshtml";
+    ViewBag.Title = "Historial";
+    Layout = "~/Views/_LayoutCliente.cshtml";
 }
 
-<h2>Lista de reservas</h2>
+<h2>Historial de viajes</h2>
 
 <table class="table table-bordered">
     <tr>
