--- a/TPFINAL/TF_Base/Views/Cliente/Create.cshtml
+++ b/TPFINAL/TF_Base/Views/Cliente/Create.cshtml
@@ -15,7 +15,7 @@
         <legend>Cliente</legend>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.dni,"dni")
+            DNI
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.dni)
@@ -29,7 +29,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Volver a la lista", "Index")
 </div>
 
 @section Scripts {
