--- a/TPFINAL/TF_Base/Views/Vuelo/Create.cshtml
+++ b/TPFINAL/TF_Base/Views/Vuelo/Create.cshtml
@@ -2,10 +2,10 @@
 
 @{
     ViewBag.Title = "Create";
-    Layout = "../_LayoutAero.cshtml";
+    Layout = "../_LayoutEmpleado.cshtml";
 }
 
-<h2>Crear Vuelo</h2>
+<h2>Agregar Vuelo</h2>
 
 @using (Html.BeginForm())
 {
@@ -40,12 +40,12 @@
         </div>
 
         <p>
-            <input type="submit" value="Crear" />
+            <input type="submit" value="Agregar" />
         </p>
     </fieldset>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Volver a la lista", "Index")
 </div>
 
