--- a/TPFINAL/TF_Base/Views/Account/Register.cshtml
+++ b/TPFINAL/TF_Base/Views/Account/Register.cshtml
@@ -2,7 +2,6 @@
 
 @{
     ViewBag.Title = "Register";
-    Layout = "../_LayoutAero.cshtml";
 }
 
 <h2>Register</h2>
@@ -28,7 +27,7 @@
             @Html.ValidationMessageFor(f => f.Nombre)
         </div>
 
-         <div class="editor-label">
+        <div class="editor-label">
             @Html.LabelFor(f => f.Apellido)
         </div>
         <div class="editor-field">
@@ -36,7 +35,7 @@
             @Html.ValidationMessageFor(f => f.Apellido)
         </div>
 
-         <div class="editor-label">
+        <div class="editor-label">
             @Html.LabelFor(f => f.Dni)
         </div>
         <div class="editor-field">
@@ -56,7 +55,7 @@
         </div>
         <div class="editor-field">
             @Html.PasswordFor(f => f.Password)
-        @Html.ValidationMessageFor(f => f.Password)
+            @Html.ValidationMessageFor(f => f.Password)
         </div>
 
         <div class="editor-label">
@@ -64,9 +63,9 @@
         </div>
         <div class="editor-field">
             @Html.PasswordFor(f => f.PasswordConfirmation)
-        @Html.ValidationMessageFor(f => f.PasswordConfirmation)
+            @Html.ValidationMessageFor(f => f.PasswordConfirmation)
         </div>
 
-        <input type="submit" value="Create" />
+        <input type="submit" value="Registrarse" />
     </fieldset>
 }
