--- a/TPFINAL/TF_Base/Views/Boleto/Details.cshtml
+++ b/TPFINAL/TF_Base/Views/Boleto/Details.cshtml
@@ -38,6 +38,6 @@
     </div>
 </fieldset>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { /* id=Model.PrimaryKey */ }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new {  id=Model.idBoleto }) |
+    @Html.ActionLink("Volver a la lista", "Index")
 </p>
