--- a/TPFINAL/TF_Base/Views/Cliente/Delete.cshtml
+++ b/TPFINAL/TF_Base/Views/Cliente/Delete.cshtml
@@ -4,21 +4,21 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Dar de baja al cliente</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Está seguro de eliminar a este cliente?</h3>
 <fieldset>
     <legend>Cliente</legend>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Usuario.nombre)
+         Nombre de usuario
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Usuario.nombre)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.dni)
+         DNI
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.dni)
@@ -27,7 +27,7 @@
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
     <p>
-        <input type="submit" value="Delete" /> |
-        @Html.ActionLink("Back to List", "Index")
+        <input type="submit" value="Dar de baja" /> |
+        @Html.ActionLink("Volver a la lista", "Index")
     </p>
 }
