--- a/TPFINAL/TF_Base/Views/Vuelo/Delete.cshtml
+++ b/TPFINAL/TF_Base/Views/Vuelo/Delete.cshtml
@@ -3,59 +3,37 @@
 @{
     ViewBag.Title = "Delete";
 }
+@if (ViewBag.error)
+{
+    <script>alert("No se puede eliminar el vuelo, tiene boletos vendidos");</script>
+}
+<h2>Eliminar vuelo</h2>
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Está seguro de eliminar este vuelo?</h3>
 <fieldset>
     <legend>Vuelos</legend>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Conexiones.CiudadOrigen)
+        <label>Informacion del vuelo</label>
     </div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.Conexiones.CiudadOrigen)
+        @Html.DisplayFor(model => model.infoVuelo)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.ConexionID)
+        <label>Cantidad de personas con reserva en el vuelo</label>
     </div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.ConexionID)
+        @Session["ocupados"]
     </div>
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.numeroVuelo)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.numeroVuelo)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.fecha)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.fecha)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.asientosDisponibles)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.asientosDisponibles)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.capacidad)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.capacidad)
-    </div>
 </fieldset>
-@using (Html.BeginForm()) {
+@using (Html.BeginForm())
+{
     @Html.AntiForgeryToken()
     <p>
-        <input type="submit" value="Delete" /> |
-        @Html.ActionLink("Back to List", "Index")
+        <input type="submit" value="Eliminar" />
+        |
+        @Html.ActionLink("Volver a la lista", "Index")
     </p>
 }
