TP FINAL VERSION 3
Modificaciones. Falta fixear la nav bar, ver todos los requisitos si se
cumplen,etc

--- a/TPFINAL/TF_Base/Views/Account/Login.cshtml
+++ b/TPFINAL/TF_Base/Views/Account/Login.cshtml
@@ -2,33 +2,31 @@
 
 @{
     ViewBag.Title = "Login";
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-}
+    Layout = "../_LayoutLogin.cshtml";
+    }
 
-<h2>Sistema de vuelos</h2>
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
-
-    <fieldset>
+       
+     <fieldset>
         <legend>Login</legend>
 
         <div class="editor-label">
             @Html.LabelFor(f => f.UserName)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(f => f.UserName)
-            @Html.ValidationMessageFor(f => f.UserName)
+            @Html.EditorFor(f => f.UserName, "Login", new { @class = "form-control", @placeholder = "e.g. Un usuario", style = "width: 400px" })
+            @Html.ValidationMessageFor(f => f.UserName,null, new {@class="text-danger" })
         </div>
 
         <div class="editor-label">
             @Html.LabelFor(f => f.Password)
         </div>
         <div class="editor-field">
-            @Html.PasswordFor(f => f.Password)
-            @Html.ValidationMessageFor(f => f.Password)
+            @Html.PasswordFor(f => f.Password, new { @class = "form-control", @placeholder = "123456", style = "width: 400px" })
+            @Html.ValidationMessageFor(f => f.Password,null, new {@class="text-danger" })
         </div>
 
         <div class="editor-label">
@@ -39,8 +37,10 @@
             @Html.ValidationMessageFor(f => f.RememberMe)
         </div>
 
-        <input type="submit" value="Ingresar" />
+        <input class="btn btn-primary" type="submit" value="Ingresar" />
     </fieldset>
+      
 }
 <br />
-<a class="btn btn-default" href="../Account/Register">Registrarse</a>
+Si no tiene usuario, Registrese <a href="../Account/Register">aquí</a>
+</center>
