--- a/TPFINAL/TF_Base/Views/Boleto/Index.cshtml
+++ b/TPFINAL/TF_Base/Views/Boleto/Index.cshtml
@@ -10,7 +10,7 @@
 <p>
     @Html.ActionLink("Agregar Boleto", "Create", null, new { @class="btn btn-default"})
 </p>
-<table class="table table-bordered">
+<table class="table table-striped">
     <tr>
         <th>Informacion boleto
         </th>
