--- a/TPFINAL/TF_Base/Views/Boleto/Details.cshtml
+++ b/TPFINAL/TF_Base/Views/Boleto/Details.cshtml
@@ -4,40 +4,40 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Detalles</h2>
 
 <fieldset>
     <legend>Boletos</legend>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Vuelos.AerolineaID)
+        <strong>ID del Boleto</strong>
+    </div>
+
+    <div class="display-field">
+        @Html.DisplayFor(model => model.idBoleto)
+    </div>
+    <div class="display-label">
+        <strong>Informacion del boleto</strong>
     </div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.Vuelos.AerolineaID)
+        @Html.DisplayFor(model => model.infoBoleto)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Cliente.dni)
+        <strong>DNI</strong>
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Cliente.dni)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Estado.nombreEstado)
+        <strong>Estado del boleto</strong>
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Estado.nombreEstado)
     </div>
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.idBoleto)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.idBoleto)
-    </div>
 </fieldset>
 <p>
-    @Html.ActionLink("Editar", "Edit", new {  id=Model.idBoleto }) |
     @Html.ActionLink("Volver a la lista", "Index")
 </p>
