--- a/TPFINAL/TF_Base/Views/Vuelo/Index.cshtml
+++ b/TPFINAL/TF_Base/Views/Vuelo/Index.cshtml
@@ -15,15 +15,13 @@
 </p>
 <table class="table table-striped">
     <tr>
+        <th>Fecha
+        </th>
         <th>Aerolinea
         </th>
-        <th>Lugar de origen
+        <th>Informacion Conexion
         </th>
-        <th>Lugar de destino 
-        </th>
-        <th>N° vuelo - Conexion ID
-        </th>
-        <th>Fecha
+        <th>N° vuelo
         </th>
         <th>Asientos disponibles
         </th>
@@ -36,24 +34,18 @@
     {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.AerolineaID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Conexiones.CiudadOrigen) -
-                @Html.DisplayFor(modelItem => item.Conexiones.PaisOrigen)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Conexiones.CiudadDestino) - 
-                @Html.DisplayFor(modelItem => item.Conexiones.PaisDestino)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.numeroVuelo) -
-                @Html.DisplayFor(modelItem => item.ConexionID)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.fecha.Day)/
                 @Html.DisplayFor(modelItem => item.fecha.Month)/
                 @Html.DisplayFor(modelItem => item.fecha.Year)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Conexiones.Aerolineas.Nombre)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Conexiones.infoConexion)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.numeroVuelo)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.asientosDisponibles)
@@ -64,7 +56,7 @@
             <td>
                 @if (Roles.IsUserInRole("EncargadoAerolinea"))
                 {
-                    @Html.ActionLink("Eliminar", "Delete", new { id = item.numeroVuelo },new{@class="btn btn-danger"})
+                    @Html.ActionLink("Eliminar", "Delete", new { id = item.numeroVuelo }, new { @class = "btn btn-danger" })
                 }
             </td>
         </tr>
@@ -72,10 +64,8 @@
 
 </table>
 
-<label>Filtrar por aerolinea</label>
-<br />
 <form action="#" method="post">
     @Html.DropDownList("aero", "Seleccione aerolinea")
-    <input type="submit" name="btn" value="Buscar vuelos de la aerolinea" />
+    <input class="btn btn-default" type="submit" name="btn" value="Filtrar por aerolinea" />
 </form>
 <br />
