--- a/TPFINAL/TF_Base/Views/Vuelo/Create.cshtml
+++ b/TPFINAL/TF_Base/Views/Vuelo/Create.cshtml
@@ -38,9 +38,9 @@
             @Html.EditorFor(model => model.capacidad)
             @Html.ValidationMessageFor(model => model.capacidad)
         </div>
-
+        <br />
         <p>
-            <input type="submit" value="Agregar" />
+            <input class="btn btn-default" type="submit" value="Agregar" />
         </p>
     </fieldset>
 }
