--- a/TPFINAL/TF_Base/Views/_LayoutEmpleado.cshtml
+++ b/TPFINAL/TF_Base/Views/_LayoutEmpleado.cshtml
@@ -14,7 +14,7 @@
             <div class="container-fluid">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">Empleado</a>
-                    <i class="fa fa-plane" style="font-size:24px;color:lightblue;text-shadow:2px 2px 4px #000000;"></i>
+                    <i class="fa fa-plane" style="font-size: 24px; color: lightblue; text-shadow: 2px 2px 4px #000000;"></i>
                 </div>
                 <ul class="nav navbar-nav">
                     <li><a href="../Vuelo/Index">Lista de Vuelos</a></li>
@@ -27,13 +27,13 @@
                     }
 
                 </ul>
-                <p class="nav navbar-nav navbar-right">
+                <ul class="nav navbar-nav navbar-right">
                     @if (WebSecurity.CurrentUserId != -1)
                     {   
-                        @Html.Label(WebSecurity.CurrentUserName)
-                        <a href="../Account/Logout"><strong>Logout</strong></a>
+                        <p class="navbar-text">@Html.Label(WebSecurity.CurrentUserName)</p>   
+                        <li><a href="../Account/Logout">Logout</a></li>
                     }
-                </p>
+                </ul>
             </div>
         </nav>
         @RenderBody()
