--- a/TPFINAL/TF_Base/Views/Cliente/Index.cshtml
+++ b/TPFINAL/TF_Base/Views/Cliente/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Index";
+    Layout = "../_LayoutAero.cshtml";
 }
 
 <h2>Index</h2>
@@ -9,7 +10,7 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table>
+<table class="table table-bordered">
     <tr>
         <th>
             Username
