--- a/TPFINAL/TF_Base/Views/Vuelo/Index.cshtml
+++ b/TPFINAL/TF_Base/Views/Vuelo/Index.cshtml
@@ -12,8 +12,7 @@
 </p>
 <table class="table table-striped">
     <tr>
-        <th>
-            Aerolinea
+        <th>Aerolinea
         </th>
         <th>Lugar de origen
         </th>
@@ -41,15 +40,15 @@
     {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem=>item.AerolineaID)
+                @Html.DisplayFor(modelItem => item.AerolineaID)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Conexiones.CiudadOrigen) -
-                @Html.DisplayFor(modelItem =>item.Conexiones.PaisOrigen)
+                @Html.DisplayFor(modelItem => item.Conexiones.PaisOrigen)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Conexiones.CiudadDestino) - 
-                @Html.DisplayFor(modelItem =>item.Conexiones.PaisDestino)
+                @Html.DisplayFor(modelItem => item.Conexiones.PaisDestino)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ConexionID)
@@ -69,9 +68,9 @@
                 @Html.DisplayFor(modelItem => item.capacidad)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new {  id=item.numeroVuelo }) |
-            @Html.ActionLink("Details", "Details", new { id=item.numeroVuelo  }) |
-            @Html.ActionLink("Delete", "Delete", new {  id=item.numeroVuelo })
+                @Html.ActionLink("Edit", "Edit", new { id = item.numeroVuelo }) |
+            @Html.ActionLink("Details", "Details", new { id = item.numeroVuelo }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.numeroVuelo })
             </td>
         </tr>
     }
